[package]
name = "sarus_egui"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends

serde = { version = "1.0.130", features = ["derive"], optional = true }

sarus = { git = "https://github.com/DGriffin91/sarus", branch = "main"}

dynfmt = { version = "0.1.5", features = ["curly"]}

anyhow = "1.0.43"


[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown


[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
